# custom-gpt-notebook

./: .dockerignore  Dockerfile  README.md  app.py  clear_confirn_dialog.py  docker-compose.yaml  markdown_export.py  pyproject.toml  requirements.txt  smart_goals.ipynb  streamlit_app.py  system_prompts.py
ollama/: Dockerfile
